--- a/Branch-Aaditya/index.html
+++ b/Branch-Aaditya/index.html
@@ -12,9 +12,9 @@
         <div class="splashtext">Login</div>
         
         <form class="formcontainer">
-            <div>
-            <label for="switch_user_type">Student(0) Teacher(1)</label>
+            <div class="user_toggleswitch_container">
             <input type="checkbox" name="Student-Teacher Selector" id="switch_user_type">
+            <label for="switch_user_type" class="user_toggleswitch"><p id="student" for="switch_user_type">Student</p><p id="faculty">Faculty</p></label>
             </div>
 
             <div>
