--- a/Homepage.html
+++ b/Homepage.html
@@ -10,10 +10,15 @@
 <body>
 <main>
     <div class="headercont">
-        <div class="header" id="name_institute">Veermata Jijabai Technological Institute</div>
+        <div class="header" id="name_institute">
+            <a href="https://vjti.ac.in/"> Veermata Jijabai Technological Institute </a></div>
         <div class="header" id="rotate1"></div>
         <div class="header" id="rotate2"></div>
-        <div class="headeritem" id="icon"></div>
+        <div class="headeritem" id="icon">
+            <a href="student_data.html">
+            <img src="profile_pic.png" alt="student profile">
+            </a>
+        </div>
     </div>
 
     <div class="contentcont">
@@ -22,7 +27,7 @@
         </div>
 
         <div id="performance_sheet">
-            <button name="performance_sheet" >PERFORMANCE SHEET</button>
+            <button name="performance_sheet"><a href="performance.html">PERFORMANCE SHEET</a></button>
         </div>
     </div>
 </main>
