--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
   </head>
   <body id="ADMIN">
     <div class="headercont">
-      <div class="header" id="name_institute">
+      <div class="header" id="name_inst">
           <a href="https://vjti.ac.in/"> Veermata Jijabai Technological Institute </a></div>
       <div class="header" id="rotate1"></div>
       <div class="header" id="rotate2"></div>
